--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -45,11 +45,11 @@
 
 	<div class="container2">
 	  <img src="pics/clouds.JPEG" alt="Background picture of clouds behind LinkedIn Link" style="width:100%;">
-	  <a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/" tabindex = 9><div class="centered1">Here's my linkedin! So you can learn more about me.</div></a>
+	  <a href = "https://www.linkedin.com/in/nealon-suthersan-68aa55142/" tabindex = 9><div class="centered1" style = "color: black;">Here's my linkedin! So you can learn more about me.</div></a>
 	</div>
 	<footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 10><i class="fa fa-envelope" aria-label="email" ></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 10><i class="fa fa-envelope"></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 11><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 12><i class="fa fa-linkedin"></i></a>
   </footer>
