--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -29,11 +29,11 @@
 
 	<div class="container1">
 	  <img src="pics/maine.JPEG" alt="Background picture of Portland, Maine, landscape" style="width:100%; height: 100vh; margin-top: -50px;">
-	  <div class="centered" style="margin-top: -16px;">My name is Nealon. I love cooking, watching TV, traveling, and learning about new and burgeoning ideas!</div>
+	  <div class="centered" style="margin-top: -16px; color: gray; background: #eedad0;">My name is Nealon. I love cooking, watching TV, traveling, and learning about new and burgeoning ideas!</div>
 	</div>
 <footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope" aria-hidden="true"></i></a>
+  	<a href="mailto:nealons@umich.edu?Subject=Hello!" tabindex = 7><i class="fa fa-envelope"></i></a>
     <a href="https://www.instagram.com/boozybrownsugar" aria-label="Instagram" tabindex = 8><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/nealon-suthersan-68aa55142/" aria-label="LinkedIn" tabindex = 9><i class="fa fa-linkedin"></i></a>
  </footer>
