--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -29,7 +29,7 @@
 
 	<div class="container1">
 	  <img src="pics/maine.JPEG" alt="Background picture of Portland, Maine, landscape" style="width:100%; height: 100vh; margin-top: -50px;">
-	  <div class="centered" style="margin-top: -16px; color: gray; background: #eedad0;">My name is Nealon. I love cooking, watching TV, traveling, and learning about new and burgeoning ideas!</div>
+	  <div class="centered" style="margin-top: -16px; color: white; background: rgba(0, 0, 0, 0.5); padding: 10px">My name is Nealon. I love cooking, watching TV, traveling, and learning about new and burgeoning ideas!</div>
 	</div>
 <footer> Thank you for checking out my site!
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
