--- a/Portfolio/tenants.html
+++ b/Portfolio/tenants.html
@@ -29,7 +29,7 @@
 
 	<div class = "descript" style = "margin-top: 300px">
 		<h2>Knowbility Challenge (Austin Tenants Council)</h2>
-		<p>I, along with the rest of Team Julia, decided to partake in the Knowbility Accessibility Challenge that was discussed in lecture. We have had a great time acquianting ourselves with client interactions and accessible web design in a way that not only helps us, but helps a great non-profit organization as well. I am proud of our final product and this that it will greatly help the Austin Tenants Council. I wanted to display the old and new ones here to show you but it wasn't loading properly on mobile platforms so I just have the new one here for you. If you want to go to the old site, check out housing-rights.org!</a>.</p>
+		<p>I, along with the rest of Team Julia, decided to partake in the Knowbility Accessibility Challenge that was discussed in lecture. We have had a great time acquianting ourselves with client interactions and accessible web design in a way that not only helps us, but helps a great non-profit organization as well. I am proud of our final product and this that it will greatly help the Austin Tenants Council. I wanted to display the old and new ones here to show you but it wasn't loading properly on mobile platforms so I just have the new one here for you. If you want to go to the old site, check out housing-rights.org!</p>
 	</div>
 	<div class = "descript" style = "margin-top: 30px">
 		<h2>Progress Thus Far</h2>
