--- a/Portfolio/donors.html
+++ b/Portfolio/donors.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Tenants Site</title>
 	<meta charset='UTF-8'>
+  	<link rel="shortcut icon" type="images/x-icon" href="pics/logo.png"/>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
 	<link rel= "stylesheet" type = "text/css" href="css/style.css">
