--- a/Portfolio/food.html
+++ b/Portfolio/food.html
@@ -2,6 +2,7 @@
 <html lang= 'en'>
 <head>
 	<title>Nealon's Hobbies</title>
+  	<link rel="shortcut icon" type="images/x-icon" href="pics/logo.png"/>
 	<meta charset='UTF-8'>
 	<meta name="viewport" content= "width=device-width,
 	initial-scale=1, shrink-to-fit=no">
