--- a/webDesignExam/index.html
+++ b/webDesignExam/index.html
@@ -29,7 +29,7 @@
 </header>
 	<div class = "flex-row">
 		<div class = "flex-column" id = "hide" style = "display: none;">
-			<img src = 'images/examPic.jpg' alt = "A Photo of my Lecturer, Colleen" style = "width: 100%;">
+			<img src = 'images/examPic.JPG' alt = "A Photo of my Lecturer, Colleen" style = "width: 100%;">
 		</div>
 		<div class = 'flex-column' id = "centered">
 			<img src = 'images/UMSI-logo.jpg' alt = "the UMSI logo" style = "width: 100%;">
